# Qaterial

./: .gitignore  CMakeLists.txt
cmake/: CPM.cmake  QaterialGenerateIcons.cmake
dep/: CMakeLists.txt
qml/: CMakeLists.txt
qml/Qaterial/: ApplicationWindow.qml  CMakeLists.txt  Card.qml  CardMedia.qml  CardRippleBackground.qml  ColorIcon.qml  ColorPaletteButton.qml  Dialog.qml  DialogButtonBox.qml  ErrorSequentialAnimation.qml  FabButton.qml  FlatFabButton.qml  GradientSlider.qml  GroupBox.qml  Icon.qml  LatoTabBar.qml  LatoTabButton.qml  ListDelegateContent.qml  Menu.qml  MenuBarItem.qml  MenuItem.qml  Page.qml  RadioIndicator.qml  RawMaterialButton.qml  RoundImage.qml  SliderHandle.qml  SquacleButton.qml  SquacleImageButton.qml  Style.qml  SwitchIndicator.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextFieldButtonContainer.qml  WindowLayoutSave.qml
qml/Qaterial/Fonts/: CMakeLists.txt
qml/Qaterial/Icons/: CMakeLists.txt
src/Qaterial/Details/: Utils.cpp
src/Qaterial/Layout/: Layout.hpp
